--- a/aio/tsconfig.app.json
+++ b/aio/tsconfig.app.json
@@ -2,10 +2,14 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
+    "baseUrl": "../src",
     "types": []
   },
+  "include": [
+    "../src/**/*"
+  ],
   "exclude": [
-    "test.ts",
-    "**/*.spec.ts"
+    "../src/test.ts",
+    "../src/**/*.spec.ts"
   ]
 }
