--- a/aio/tsconfig.e2e.json
+++ b/aio/tsconfig.e2e.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
+    "baseUrl": "../src",
     "module": "commonjs",
     "target": "es5",
     "types": [
