--- a/aio/tsconfig.spec.json
+++ b/aio/tsconfig.spec.json
@@ -2,17 +2,18 @@
   "extends": "../tsconfig.json",
   "compilerOptions": {
     "outDir": "../out-tsc/spec",
+    "baseUrl": "../src",
     "types": [
       "jasmine",
       "node"
     ]
   },
   "files": [
-    "test.ts",
-    "polyfills.ts"
+    "../src/test.ts",
+    "../src/polyfills.ts"
   ],
   "include": [
-    "**/*.spec.ts",
-    "**/*.d.ts"
+    "../src/**/*.spec.ts",
+    "../src/**/*.d.ts"
   ]
 }
