--- a/angular.json
+++ b/angular.json
@@ -17,7 +17,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "aio/tsconfig.app.json",
             "assets": [
               "src/favicon.ico",
               "src/assets"
@@ -72,8 +72,8 @@
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
-            "karmaConfig": "src/karma.conf.js",
+            "tsConfig": "aio/tsconfig.spec.json",
+            "karmaConfig": "aio/karma.conf.js",
             "styles": [
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
@@ -91,8 +91,8 @@
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
             "tsConfig": [
-              "src/tsconfig.app.json",
-              "src/tsconfig.spec.json"
+              "aio/tsconfig.app.json",
+              "aio/tsconfig.spec.json"
             ],
             "exclude": [
               "**/node_modules/**"
@@ -120,7 +120,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "aio/tsconfig.e2e.json",
             "exclude": [
               "**/node_modules/**"
             ]
