--- a/.browserslistrc
+++ b/.browserslistrc
@@ -4,8 +4,8 @@
 #
 # For IE 9-11 support, please remove 'not' from the last line of the file and adjust as needed
 
-> 0.5%
 last 2 versions
-Firefox ESR
+> 1%
 not dead
-not IE 9-11
+not ie <= 10
+not ie_mob <= 10
