--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,17 @@ cache:
   directories:
     - node_modules
 
+addons:
+  apt:
+    sources:
+      - google-chrome
+    packages:
+      - google-chrome-stable
+
 before_script:
   - npm install -g --silent @angular/cli
 
 script:
-  - npm test
   - ng build --prod
+  - npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI
+  - npm run e2e -- --protractor-config=./e2e/protractor-ci.conf.js
