--- a/angular.json
+++ b/angular.json
@@ -19,14 +19,13 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "aio/tsconfig.app.json",
             "assets": [
-              "src/favicon.ico",
               "src/assets"
             ],
             "styles": [
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/sass/main.scss"
+              "src/styles/main.scss"
             ],
             "scripts": []
           },
