--- a/.travis.yml
+++ b/.travis.yml
@@ -20,5 +20,6 @@ before_script:
   - npm install -g --silent @angular/cli
 
 script:
+  - npm run lint
   - npm run test -- --watch=false --progress=false --browsers=ChromeHeadlessCI
   - npm run e2e -- --protractor-config=./e2e/protractor-ci.conf.js
